[package]
name = "rusage"
version = "1.0.2"
authors = ["Denis Bueno", "Denis Bueno <dbueno@gmail.com>"]
description = "Runs a command and reports on its resource usage"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["signal","resource"] }
